# django-social-network

./: .flake8  .gitignore  .gitlab-ci.yml  pyproject.toml
clonestagram/clonestagram/: settings.py  urls.py
clonestagram/social_network/: admin.py  forms.py  models.py  urls.py  views.py
clonestagram/static/: style.css
clonestagram/templates/: base.html
clonestagram/templates/django_registration/: registration_form.html
clonestagram/templates/profile/: edit_profile.html  profile.html
clonestagram/templates/registration/: change_password.html  login.html
clonestagram/templates/tape/: post_create.html  post_detail.html  tape.html
